# DOAR

./: .gitignore  AUDIT_REPORT.md  AUDIT_V3.md  README.md  RUN_GUIDE_WINDOWS.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
docs/: ARCHITECTURE.md  EXPERIMENT_GUIDE.md  LEGACY_AUDIT.md  LOCAL_EXECUTION.md  LOCAL_TRAINING_WORKFLOW_WINDOWS.md  LOCAL_WORKFLOW_WINDOWS.md  PSYCHOLOGIST_RULES_TRANSLATION.md  PSYCHOLOGIST_SOURCE_AUDIT.md  REMAINING_IMPLEMENTATION_AUDIT.md  THESIS_ARCHITECTURE.md  TRAINING_GUIDE.md  TRAINING_READINESS_AUDIT.md  TROUBLESHOOTING.md  WINDOWS_SETUP.md
legacy/: README_v2.md  SETUP.md  analyze_dataset.py  append_quickstart.py  append_v2_cells.py  pipeline.py  requirements.txt  setup.bat
notebooks/: DOAR_Colab.ipynb
scripts/: build_colab_notebook.py  setup_windows.ps1
src/: __init__.py  arabic_translator.py  claim_builder.py  numeric_validator.py  ocr_validator.py  parent_ai_helper.py  psych_safety_validator.py  safety_policy.py  visual_claim_validator.py
tests/: test_ablation.py  test_calibration_wiring.py  test_concerns_and_ingest.py  test_confidence_ceiling.py  test_config_plumbing.py  test_deep_compare.py  test_embedding_comparison.py  test_evaluation.py  test_explainability.py  test_export_and_guard.py  test_extras_separation.py  test_fusion_calibration.py  test_fusion_config_and_provenance.py  test_gate_resolved_output.py  test_gradcam_and_preprocessing.py  test_integrity_fixes.py  test_late_fusion.py  test_leakage_gate.py  test_localization.py  test_objective.py  test_oof.py  test_preprocessing.py  test_provenance.py  (+13 more)
(+82 files in other folders)
