[project]
name = "doar-v3"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = ["numpy>=1.26,<3", "Pillow>=10,<12"]

[project.optional-dependencies]
ml = ["scikit-learn>=1.4", "pandas>=2.2"]
cv = ["opencv-python-headless>=4.9"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]
ingest = ["pypdf>=4"]
ui = ["streamlit>=1.36,<2"]
deep = ["torch>=2.2,<3", "torchvision>=0.17,<1"]
embeddings = ["open-clip-torch>=2.26,<3"]

[tool.ruff.lint.per-file-ignores]
# main.py and tests bootstrap sys.path before importing the (editable) package,
# which legitimately requires imports after that statement. This targets only
# E402 for those files; no rule is weakened globally.
"main.py" = ["E402"]
"tests/**" = ["E402"]
